fixing spacing issue when using no-section section

--- a/resources/assets/scss/partials/_dashboard.scss
+++ b/resources/assets/scss/partials/_dashboard.scss
@@ -229,7 +229,7 @@
   &.no-section {
     margin: 0 auto 55px;
 
-    .container > .element:first-of-type {
+    &.mt-xxxl {
       margin-top: 60px;
     }
   }
